--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
   },
   "eslintConfig": {
     "rules": {
-      "import/no-unresolved": "off"
+      "import/no-unresolved": "off",
+      "jsx-a11y/label-has-for": [ 2, {
+        "required": {
+            "some": [ "nesting" ]
+        }
+      }]
     },
     "extends": [
       "airbnb",
